--- a/app/index.html
+++ b/app/index.html
@@ -1,37 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Intro component with sign up form</title>
-  <link rel="stylesheet" href="../dist/style.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <title>Frontend Mentor | Intro component with sign up form</title>
+    <link rel="stylesheet" href="../dist/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
-
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+    <div class="container">
+        <header class="container__header">
+            <h1 class="container__header__h1">Learn to code by watching others</h1>
+            <p class="container__header__p">See how experienced developers solve problems in real-time. Watching
+                scripted tutorials is great,
+                but understanding how developers think is invaluable.</p>
+        </header>
+        <main class="container__main-content">
+            <section class="container__main-content__top">
+                <p class="container__main-content__top__text"><span>Try it free 7 days</span> then $20/mo. thereafter
+                </p>
+            </section>
+            <form action="" class="container__main-content__bottom">
+                <label for="first-name"></label>
+                <input type="text" placeholder="First Name" id="first-name">
+                <label for="last-name"></label>
+                <input type="text" placeholder="Last Name" id="last-name">
+                <label for="email"></label>
+                <input type="text" placeholder="Email Address" id="email">
+                <label for="password"></label>
+                <input type="text" placeholder="Password" id="password">
+                <label for="claim-btn"></label>
+                <button type="button" id="claim-btn">Claim your free trial</button>
+                <p class="main-content__bottom__ts&cs">By clicking the button, you are agreeing to our <a href="">Terms
+                        and Services</a></span>
+                </p>
+            </form>
+            <!-- <section class="main-content__bottom">
+            </section> -->
+        </main>
+        <!-- <footer>
+            <p class="attribution">
+                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+                Coded by <a href="#">Your Name Here</a>.
+            </p>
+        </footer> -->
+    </div>
 </body>
+
 </html>
