--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" role="main">
         <header class="container__header">
             <h1 class="container__header__h1">Learn to code by watching others</h1>
             <p class="container__header__p">See how experienced developers solve problems in real-time. Watching
@@ -28,30 +28,38 @@
                 </p>
             </section>
             <form action="" class="container__main-content__bottom">
-                <label for="first-name"></label>
-                <input type="text" placeholder="First Name" id="first-name">
-                <label for="last-name"></label>
-                <input type="text" placeholder="Last Name" id="last-name">
-                <label for="email"></label>
-                <input type="text" placeholder="Email Address" id="email">
-                <label for="password"></label>
-                <input type="text" placeholder="Password" id="password">
-                <label for="claim-btn"></label>
+                <label for="first-name">Enter your first name</label>
+                <div class="inputcan">
+                    <input type="text" placeholder="First Name" id="first-name">
+                </div>
+                <label for="last-name">Enter your last name</label>
+                <div class="inputcan">
+                    <input type="text" placeholder="Last Name" id="last-name">
+                </div>
+                <label for="email">Enter your email address</label>
+                <div class="inputcan">
+                    <input type="text" placeholder="Email Address" id="email">  
+                </div>
+                <label for="password">Enter your password</label>
+                <div class="inputcan">
+                    <input type="text" placeholder="Password" id="password">
+                </div>
+                <label for="claim-btn">Click button to claim your free trial</label>
                 <button type="button" id="claim-btn">Claim your free trial</button>
-                <p class="main-content__bottom__ts&cs">By clicking the button, you are agreeing to our <a href="">Terms
-                        and Services</a></span>
+                <p class="container__main-content__bottom__terms">By clicking the button, you are agreeing to our <a href="">Terms
+                        and Services</a>
                 </p>
             </form>
-            <!-- <section class="main-content__bottom">
-            </section> -->
         </main>
-        <!-- <footer>
+        <footer>
             <p class="attribution">
                 Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-                Coded by <a href="#">Your Name Here</a>.
+                Coded by <a href="https://github.com/OjayII">Ojay</a>.
             </p>
-        </footer> -->
+        </footer>
     </div>
+    
+    <script src="main.js"></script>
 </body>
 
 </html>
